# cligenius

./: .gitignore  .pre-commit-config.yaml  404.html  Activate.ps1  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.insiders.yml  mkdocs.yml  pdm_build.py  pyproject.toml  requirements-docs.txt  requirements-tests.txt  sitemap.xml
.github/: labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: build-docs.yml  deploy-docs.yml  issue-manager.yml  latest-changes.yml  mergemate.yaml  publish.yml  smokeshow.yml  test-redistribute.yml  test.yml
alternatives/: index.html
cligenius/: __init__.py  _completion_classes.py  _completion_shared.py  _typing.py  cli.py  completion.py  core.py  main.py  models.py  params.py  rich_utils.py  testing.py  utils.py
cligenius-cli/: README.md  index.html
contributing/: index.html
data/: members.yml
docs/: alternatives.md  contributing.md  environment-variables.md  features.md  help-cligenius.md  help-typer.md  help-types.md  index.md  management-tasks.md  management.md  release-notes.md  virtual-environments.md
docs/about/: index.md
docs/tutorial/: app-dir.md  cligenius-command.md  exceptions.md  first-steps.md  index.md  install.md  launch.md  one-file-per-command.md  options-autocompletion.md  package.md  printing.md  progressbar.md  prompt.md  terminating.md  testing.md  types-command.md  using-click.md
docs/tutorial/arguments/: default.md  envvar.md  help.md  optional.md  other-uses.md
docs/tutorial/commands/: callback.md  context.md  help.md  index.md  one-or-multiple.md
docs/tutorial/multiple-values/: multiple-options.md
docs/tutorial/options/: callback-and-context.md  help.md  index.md  name.md  password.md  required.md  version.md
docs/tutorial/parameter-cligenius/: datetime.md  file.md
docs/tutorial/parameter-types/: bool.md  custom-types.md  datetime.md  file.md  index.md
docs/tutorial/subcommands/: add-cligenius.md  add-typer.md  callback-override.md  index.md  name-and-help.md  nested-subcommands.md  single-file.md
docs_src/app_dir/: tutorial001.py
docs_src/arguments/default/: tutorial001.py  tutorial001_an.py  tutorial002.py  tutorial002_an.py
docs_src/arguments/envvar/: tutorial001.py  tutorial001_an.py  tutorial002.py  tutorial002_an.py  tutorial003.py  tutorial003_an.py
docs_src/arguments/help/: tutorial001.py  tutorial001_an.py  tutorial002.py  tutorial002_an.py  tutorial003.py  tutorial003_an.py  tutorial004.py  tutorial004_an.py  tutorial005.py  tutorial005_an.py  tutorial006.py  tutorial006_an.py  tutorial007.py  tutorial007_an.py  tutorial008.py  (+1 more)
docs_src/exceptions/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py
docs_src/first_steps/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py  tutorial005.py  tutorial006.py
docs_src/launch/: tutorial001.py  tutorial002.py
docs_src/one_file_per_command/: main.py  version.py
docs_src/options_autocompletion/: tutorial001.py  tutorial001_an.py  tutorial002.py  tutorial002_an.py  tutorial003.py  tutorial003_an.py  tutorial004.py  tutorial004_an.py  tutorial005.py  tutorial005_an.py  tutorial006.py  tutorial006_an.py  tutorial007.py  tutorial007_an.py  tutorial008.py  tutorial008_an.py  tutorial009.py  tutorial009_an.py
docs_src/printing/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py  tutorial005.py  tutorial006.py
docs_src/progressbar/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py  tutorial005.py  tutorial006.py
docs_src/prompt/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py
docs_src/terminating/: tutorial001.py  tutorial002.py  tutorial003.py
docs_src/using_click/: tutorial003.py  tutorial004.py
features/: index.html
help-cligenius/: index.html
release-notes/: index.html
scripts/: deploy_docs_status.py  docs.py  format.sh  lint.sh  test.sh
scripts/docker/: compose.yaml
search/: search_index.json
tests/: test_ambiguous_params.py  test_annotated.py  test_callback_warning.py  test_corner_cases.py  test_deprecation.py  test_exit_errors.py  test_future_annotations.py  test_launch.py  test_others.py  test_param_meta_empty.py  test_rich_markup_mode.py  test_rich_utils.py  test_tracebacks.py  test_type_conversion.py  utils.py
tests/assets/: compat_click7_8.py  completion_argument.py  completion_no_types.py  completion_no_types_order.py  prog_name.py  type_error_no_rich.py  type_error_no_rich_short_disable.py  type_error_normal_traceback.py
tests/test_cli/: test_app_other_name.py  test_completion_run.py  test_doc.py  test_empty_script.py  test_extending_app.py  test_extending_empty_app.py  test_func_other_name.py  test_help.py  test_multi_app.py  test_multi_app_cli.py  test_multi_app_sub.py  test_multi_func.py  test_not_python.py  test_sub.py  test_sub_completion.py  test_sub_help.py  test_version.py
tests/test_compat/: test_option_get_help.py
tests/test_completion/: colon_example.py  test_completion.py  test_completion_complete.py  test_completion_complete_no_help.py  test_completion_install.py  test_completion_option_colon.py  test_completion_show.py
tutorial/: index.html
tutorial/app-dir/: index.html
tutorial/arguments/: index.html
tutorial/cligenius-command/: index.html
tutorial/commands/: index.html
tutorial/exceptions/: index.html
tutorial/first-steps/: index.html
tutorial/launch/: index.html
tutorial/multiple-values/: index.html
tutorial/options/: index.html
tutorial/options-autocompletion/: index.html
tutorial/package/: index.html
tutorial/parameter-cligenius/: index.html
tutorial/printing/: index.html
tutorial/progressbar/: index.html
tutorial/prompt/: index.html
tutorial/subcommands/: index.html
tutorial/terminating/: index.html
tutorial/testing/: index.html
tutorial/using-click/: index.html
types/: __init__.py  _completion_classes.py  _completion_shared.py  cli.py  completion.py  core.py  main.py  models.py  params.py  rich_utils.py  testing.py  utils.py
types-cli/: README.md
(+395 files in other folders)
